Parser: fixing ignored jump